--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "display": "Configuration for Poker Game",
+  "display": "Configuration for Trapezoidal Rule Calculator",
   "compilerOptions": {
     "target": "es2022",
     "module": "commonjs",
